I can't believe it actually works

--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,7 @@
 {
 	"beatRadius": 21,
-	
+	"gainThreshold": .8,
+
 	"shader": "frag0",
 
 	"oscillators": [
@@ -8,7 +9,7 @@
 			"stream":				"stream0",
 			"period":				1000,
 			"phase":				0.,
-			"gain":					1.2,
+			"gain":					2.2,
 			"balance":				[ 1.5, 1., 1. ],
 			"periodRC_hysteresis":	1.,
 			"gainRC_hysteresis":	1.
@@ -17,7 +18,7 @@
 			"stream":				"stream1",
 			"period":				1000,
 			"phase":				0.,
-			"gain":					1.2,
+			"gain":					2.2,
 			"balance":				[ 1.5, 1., 1. ],
 			"periodRC_hysteresis":	1.,
 			"gainRC_hysteresis":	1.
@@ -26,7 +27,7 @@
 			"stream":				"stream2",
 			"period":				1000,
 			"phase":				0.,
-			"gain":					1.2,
+			"gain":					2.2,
 			"balance":				[ 1.5, 1., 1. ],
 			"periodRC_hysteresis":	1.,
 			"gainRC_hysteresis":	1.
