--- a/data/config.json
+++ b/data/config.json
@@ -3,10 +3,20 @@
 
 	"shader": "frag0",
 	
+	"distortion": {
+		"incidence":			.05,
+		"gain":					[ .01, .005 ],
+		"freq":					[ 100., 100. ],
+		"centerline":			[ .5, .2 ],
+		"heading":				[ 1.57079632679, .19634954084 ],
+		"decay":				[ 10., 5. ],
+		"duration":				[ 200, 100 ]
+	},
+
 	"default": {
 		"streamPath":			"Mai 2014",
 
-		"pulseRadius":			250,
+		"pulseRadius":			200,
 		"pulseSkew":			0.,
 		"period":				1000,
 		"phase":				0.,
@@ -14,13 +24,13 @@
 		"balance":				[ 1., 1., 1. ],
 		"periodRC_hysteresis":	1.,
 		"gainRC_hysteresis":	1.,
-		"gainThreshold":		.1
+		"gainThreshold":		.5,
 	},
 
 	"oscillators": [
 		{
 			"stream":				"stream 1",
-			"period":				500,
+			"period":				2000,
 			"phase":				0.,
 			"gain":					2.2,
 			"balance":				[ 1., 5., 5. ],
@@ -29,7 +39,7 @@
 		},
 		{
 			"stream":				"stream 2",
-			"period":				500,
+			"period":				4000,
 			"phase":				0.,
 			"gain":					2.2,
 			"balance":				[ 3., 1., 1. ],
@@ -38,7 +48,7 @@
 		},
 		{
 			"stream":				"stream 3",
-			"period":				500,
+			"period":				6000,
 			"phase":				0.5,
 			"gain":					2.2,
 			"balance":				[ 1., 3., 1. ],
