--- a/data/config.json
+++ b/data/config.json
@@ -9,6 +9,7 @@
 		"freq":					[ 100., 100. ],
 		"centerline":			[ .5, .2 ],
 		"heading":				[ 1.57079632679, .19634954084 ],
+		"_comment":				"^^ == [ π/2, π/16 ], so it usually stays pretty close to vertical",
 		"decay":				[ 10., 5. ],
 		"duration":				[ 200, 100 ]
 	},
@@ -16,44 +17,27 @@
 	"default": {
 		"streamPath":			"Mai 2014",
 
-		"pulseRadius":			200,
+		"pulseRadius":			2000,
 		"pulseSkew":			0.,
-		"period":				1000,
+		"period":				8000,
 		"phase":				0.,
-		"gain":					2.,
-		"balance":				[ 1., 1., 1. ],
+		"gain":					3.,
+		"gainThreshold":		.5,
+		"balance":				[ 3., 1., 1. ],
+
 		"periodRC_hysteresis":	1.,
 		"gainRC_hysteresis":	1.,
-		"gainThreshold":		.5,
 	},
 
 	"oscillators": [
 		{
 			"stream":				"stream 1",
-			"period":				2000,
-			"phase":				0.,
-			"gain":					2.2,
-			"balance":				[ 1., 5., 5. ],
-			"periodRC_hysteresis":	1.,
-			"gainRC_hysteresis":	1.
 		},
 		{
 			"stream":				"stream 2",
-			"period":				4000,
-			"phase":				0.,
-			"gain":					2.2,
-			"balance":				[ 3., 1., 1. ],
-			"periodRC_hysteresis":	1.,
-			"gainRC_hysteresis":	1.
 		},
 		{
 			"stream":				"stream 3",
-			"period":				6000,
-			"phase":				0.5,
-			"gain":					2.2,
-			"balance":				[ 1., 3., 1. ],
-			"periodRC_hysteresis":	1.,
-			"gainRC_hysteresis":	1.
 		},
 	]
 }
