--- a/data/config.json
+++ b/data/config.json
@@ -22,7 +22,7 @@
 		"period":				8000,
 		"phase":				.5,
 		"gain":					3.,
-		"gainThreshold":		.5,
+		"gainThreshold":		.0,
 		"balance":				[ 1., 3., 3. ],
 
 		"periodRC_hysteresis":	1.,
@@ -32,9 +32,12 @@
 	"oscillators": [
 		{
 			"stream":				"stream 1",
-			"period":				1000,
-			"pulseRadius":			50,
-			"balance":				[ 3., 1., 1. ]
+			"phase":				0,
+			"period":				8000,
+			"pulseRadius":			2000,
+			"gain":					6.,
+			"pulseSkew":			10.,
+			"balance":				[ 1., 1., 1. ]
 		},
 		{
 			"stream":				"stream 2",
