made skew work. but it's not strong enough, it very quickly dissolves into a wiggle. need to ditch it, no sense going to bézier here

--- a/data/config.json
+++ b/data/config.json
@@ -33,14 +33,15 @@
 		{
 			"stream":				"stream 1",
 			"phase":				.5,
-			"period":				8000,
+			"period":				4000,
 			"halfpulse":			500,
-			"gain":					6.,
-			"skew":					2.,
+			"gain":					12.,
+			"skew":					-9.,
 			"balance":				[ 1., 1., 1. ]
 		},
 		{
 			"stream":				"stream 2",
+			"halfpulse":			500.,
 		},
 		{
 			"stream":				"stream 3",
